logs/pyhexad.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyhexad'...
Compiling './lib/python3.5/site-packages/pyhexad/h5appendRows.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5appendRows.py", line 72
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5newArray.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5newArray.py", line 134
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5newFile.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5newFile.py", line 52
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5newGroup.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5newGroup.py", line 43
    except RuntimeError, KeyError: # h5py throws a KeyError for a dangling link
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5newTable.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5newTable.py", line 108
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5readImage.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5readImage.py", line 70
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5writeArray.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5writeArray.py", line 62
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5writeAttribute.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5writeAttribute.py", line 119
    except IOError, e:
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/h5writeTable.py'...
***   File "./lib/python3.5/site-packages/pyhexad/h5writeTable.py", line 96
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyhexad/renderer.py'...
***   File "./lib/python3.5/site-packages/pyhexad/renderer.py", line 78
    except Exception, ex:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyhexad-0.1.6.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
